[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Suguru Yamamoto <sgryjp@gmail.com>"]

[tool.poetry.dependencies]
altair = "^4.1.0"
ipython = "^7.23.1"
jupyter = "^1.0.0"
matplotlib = "^3.4.2"
numba = "^0.53.1"
numpy = "^1.20.3"
pandas = "^1.2.4"
pyarrow = "^4.0.0"
python = ">=3.8.1,<3.10"
scikit-learn = "^0.24.2"
statsmodels = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
